--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="title_bookmark">Bookmark</string>
     <string name="title_profile">Profile</string>
     <string name="heart">Heart</string>
+    <string name="title">Title</string>
+    <string name="content_count">10 Questions</string>
 </resources>
