--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="heart">Heart</string>
     <string name="title">Title</string>
     <string name="content_count">10 Questions</string>
+    <string name="no_internet_connection_try_again">No Internet Connection Try Again!</string>
+    <string name="try_again">Try Again</string>
 </resources>
