--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="content_count">10 Questions</string>
     <string name="no_internet_connection_try_again">No Internet Connection Try Again!</string>
     <string name="try_again">Try Again</string>
+    <string name="category_title">Category Title</string>
+    <string name="start_test">Start Test</string>
 </resources>
