--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="try_again">Try Again</string>
     <string name="category_title">Category Title</string>
     <string name="start_test">Start Test</string>
+    <string name="description">Description</string>
 </resources>
