--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,13 @@
     <string name="category_title">Category Title</string>
     <string name="start_test">Start Test</string>
     <string name="description">Description</string>
+    <string name="download">Download</string>
+    <string name="add">Add</string>
+    <string name="added">Added</string>
+    <string name="add_failed_try_again">adding failed try again</string>
+    <string name="you_dont_have_enough_credit">You don\'t have enough credit</string>
+    <string name="total_credits">Total Credits</string>
+    <string name="view_ad">view ad</string>
+    <string name="to_view_question_add_first">to view questions try to add first</string>
+    <string name="added_successfully">Added Successfully</string>
 </resources>
