--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="share_content">share</string>
     <string name="share_using">share using</string>
     <string name="bookmark_deleted">bookmark deleted</string>
+    <string name="coins">Coins</string>
 </resources>
