--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="share_using">share using</string>
     <string name="bookmark_deleted">bookmark deleted</string>
     <string name="coins">Coins</string>
+    <string name="added_to_bookmark">Added to bookmark</string>
 </resources>
