--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="correct">Correct</string>
     <string name="wrong">Wrong</string>
     <string name="please_wait_for_download_to_finish">Please wait for download to be finished</string>
+    <string name="choice">Choice</string>
 </resources>
