handle answer selection, process correct answer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,6 @@
     <string name="no_response">No response</string>
     <string name="test_result">Test Result</string>
     <string name="performance">Performance</string>
+    <string name="skip">Skip</string>
+    <string name="check">Check</string>
 </resources>
