--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="keep_practicing">Keep Practicing!</string>
     <string name="number_of_life">Available life: </string>
     <string name="end_test">End Test</string>
+    <string name="code">Code</string>
 </resources>
