--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,7 @@
     <string name="number_of_life">Available life: </string>
     <string name="end_test">End Test</string>
     <string name="code">Code</string>
+    <string name="connect_with_us">Connect with us</string>
+    <string name="version">version: 1.0</string>
+    <string name="title_about">About</string>
 </resources>
