--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Skill Assessment</string>
+    <string name="app_desc">This Application will help you in improving your programming skills to pass the tests well with great score</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
@@ -48,6 +49,6 @@
     <string name="connect_with_us">Connect with us</string>
     <string name="version">version: 1.0</string>
     <string name="title_about">About</string>
-    <string name="donation_title">This project needs you! If you would like to support this project\'s further development, the creator of this project or the continuous maintenance of this project, feel free to donate. Thank you!</string>
+    <string name="donation_title"></string>
     <string name="donate">Donate</string>
 </resources>
